{
    "name": "PlayerControll",
    "maps": [
        {
            "name": "Player",
            "id": "ba1a0317-4155-47a9-b025-58a565f32963",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "74942c11-dfda-4070-b7c4-3d2dfac6a571",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "24c53f23-3abd-4630-a231-39920ebd796d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "4f4bbc81-32e0-4d37-bd58-e7f810e49e69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PutIn",
                    "type": "Button",
                    "id": "efe57a22-2ee7-4a82-ba7e-c30def0317ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Barrier",
                    "type": "Button",
                    "id": "d9cd6ebf-e805-49ec-bf9c-15e7016b03c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9af15a20-2872-40eb-ac27-51f13e1e8261",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "491193e3-5d04-42aa-9a75-817567202802",
                    "path": "<HID::Nintendo Wireless Gamepad>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dd7c5ee-8dae-4aef-b740-046d0d104bb1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6f9a0b1-4b36-4754-8350-cfe9e16e1a3b",
                    "path": "<HID::Nintendo Wireless Gamepad>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d41930e-7132-49b8-b602-a1536914cf31",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "PutIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56d26124-4dbe-4aa9-bc00-dd599ef12733",
                    "path": "<HID::Nintendo Wireless Gamepad>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "PutIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cacb99f1-358e-4b90-b8a4-4e24e59c0e45",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PutIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc9bf2a1-d12a-4cac-b40d-27c55b030ed9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Barrier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65dc6e40-608c-435c-9b08-4630f38a0728",
                    "path": "<HID::Nintendo Wireless Gamepad>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Barrier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb8ab8ad-cb57-4788-be77-9f21123465ff",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28778dff-8b1c-431c-861e-73578085a1e2",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}